fix spacing of (sub-) headlines in case studies

--- a/src/assets/css/components/_case-study.scss
+++ b/src/assets/css/components/_case-study.scss
@@ -13,6 +13,10 @@
   word-wrap: break-word;
   word-break: break-word;
   hyphens: auto;
+
+  h3 {
+    margin: 2rem 0 1rem;
+  }
 }
 
 .case-study__image-wrapper {
